--- a/login.html
+++ b/login.html
@@ -27,17 +27,32 @@
             <div class="login-card card shadow">
               <div class="card-body">
                 <h2 class="text-center mb-4">Logg in</h2>
-                <form>
+                <form id="loginForm">
                   <div class="mb-3">
                     <label for="email" class="form-label">E-mail:</label>
-                    <input type="email" class="form-control" id="email" />
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email"
+                      required
+                    />
+                    <div class="invalid-feedback">
+                      Please use @noroff.no or @stud.noroff.no e-mail
+                    </div>
                   </div>
                   <div class="mb-3">
                     <label for="password" class="form-label">Password:</label>
-                    <input type="password" class="form-control" id="password" />
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="password"
+                      required
+                    />
+                    <div class="invalid-feedback">Password is required</div>
                   </div>
                   <button type="button" class="btn btn-primary">Log in</button>
                 </form>
+                <div id="errorMessage" class="mt-3 text-danger"></div>
               </div>
             </div>
           </div>
@@ -45,7 +60,7 @@
       </div>
     </main>
     <!--Footer-->
-    <footer class="footer-custom center bg-secondary py-4">
+    <footer class="footer-custom bg-secondary py-4">
       <div class="container text-center">
         <div class="social-icons mb-3">
           <a
@@ -62,6 +77,7 @@
         <p>&copy; 2025 AuctionBidding - All rights reserved.</p>
       </div>
     </footer>
+    <script src="/js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
