--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
                     />
                     <div class="invalid-feedback">Password is required</div>
                   </div>
-                  <button type="button" class="btn btn-primary">Log in</button>
+                  <button type="submit" class="btn btn-primary">Log in</button>
                 </form>
                 <div id="errorMessage" class="mt-3 text-danger"></div>
               </div>
