--- a/profilepage.html
+++ b/profilepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>profilepage</title>
     <link rel="stylesheet" href="scss/main.css" />
+    <link rel="stylesheet" href="/scss/profile.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,5 +20,143 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!--Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">AuctionBidding</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="listings.html">Auctions</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="profile.html">Profile</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="btn btn-primary" href="login.html">Logout</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--Profile content-->
+    <div class="container py-5">
+      <!--Avatar and credit-->
+      <div class="row mb-5">
+        <div class="col-md-4 text-center">
+          <div class="avatar-upload">
+            <img
+              src="placeholder-avatar.jpg"
+              class="avatar-preview"
+              id="avatarPreview"
+            />
+            <input
+              type="file"
+              id="avatarInput"
+              accept="image/*"
+              class="d-none"
+            />
+            <button
+              class="btn btn-secondary mt-3"
+              onclick="document.getElementById('avatarInput').click()"
+            >
+              Change avatar
+            </button>
+          </div>
+        </div>
+        <div class="col-md-8">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Your Profile</h3>
+              <div class="d-flex justify-content-between align-items-center">
+                <h5>Credit: <span id="userCredit">1000</span></h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!--Creating new listing-->
+      <div class="card mb-4">
+        <div class="card-header">
+          <h4 class="mb-0">Create new auction</h4>
+        </div>
+        <div class="card-body">
+          <form id="createListingForm">
+            <div class="mb-3">
+              <label class="form-label">Title</label>
+              <input type="text" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Description</label>
+              <textarea class="form-control" rows="3" required></textarea>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Deadline</label>
+              <input type="datetime-local" class="form-control" required />
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Picture</label>
+              <input type="file" class="form-control" multiple accept="image" />
+              <div class="listing-media-preview mt-2" id="mediaPreview"></div>
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Create auction
+            </button>
+          </form>
+        </div>
+      </div>
+      <!--Active auctions-->
+      <div class="card mb-4">
+        <div class="card-header">
+          <h4 class="mb-0">Your active auctions</h4>
+        </div>
+        <div class="card-body" id="activeListings">
+          <!--Lists of auctions will show here-->
+        </div>
+      </div>
+      <!--Your bids-->
+      <div class="card">
+        <div class="card-header">
+          <h4 class="mb-0">Your bid</h4>
+        </div>
+        <div class="card-body" id="userBids">
+          <!--Lists of bids will be displayed here-->
+        </div>
+      </div>
+    </div>
+    <!--Footer-->
+    <footer class="footer-custom bg-secondary py-4">
+      <div class="container text-center">
+        <div class="social-icons mb-3">
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            class="social-link"
+          >
+            <i class="fa-brands fa-youtube fa-2xl text-white"></i>
+          </a>
+          <a href="https://github.com/" target="_blank" class="social-link">
+            <i class="fa-brands fa-github fa-2xl text-white"></i>
+          </a>
+        </div>
+        <p>&copy; 2025 AuctionBidding - All rights reserved.</p>
+      </div>
+    </footer>
+    <script src="/js/profile.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
