--- a/login.html
+++ b/login.html
@@ -22,9 +22,9 @@
   <body>
     <main class="login-section">
       <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mt-5">
           <div class="col-md-6">
-            <div class="login-card card shadow">
+            <div class="card shadow mt-5">
               <div class="card-body">
                 <h2 class="text-center mb-4">Logg in</h2>
                 <form id="loginForm">
@@ -59,24 +59,7 @@
         </div>
       </div>
     </main>
-    <!--Footer-->
-    <footer class="footer-custom bg-secondary py-4">
-      <div class="container text-center">
-        <div class="social-icons mb-3">
-          <a
-            href="https://www.youtube.com/"
-            target="_blank"
-            class="social-link"
-          >
-            <i class="fa-brands fa-youtube fa-2xl text-white"></i>
-          </a>
-          <a href="https://github.com/" target="_blank" class="social-link">
-            <i class="fa-brands fa-github fa-2xl text-white"></i>
-          </a>
-        </div>
-        <p>&copy; 2025 AuctionBidding - All rights reserved.</p>
-      </div>
-    </footer>
+
     <script src="/js/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
