--- a/listings.html
+++ b/listings.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AuctionBidding</title>
+    <title>Listings</title>
     <link rel="stylesheet" href="scss/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -38,7 +38,7 @@
               <a class="nav-link" href="listings.html">Auctions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">About</a>
+              <a class="nav-link" href="profilepage.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profilepage.html">Profile</a>
@@ -54,11 +54,8 @@
         </div>
       </div>
     </nav>
-
-    <!--Hero section-->
-
-    <!--This is search bar -->
-    <div class="search-section py-5">
+    <!--Search Section-->
+    <div class="search-section py-5 bg-light">
       <div class="container">
         <div class="row justify-content-center pb-4 pt-4">
           <div class="col-md-8 col-lg-6">
@@ -79,49 +76,13 @@
         </div>
       </div>
     </div>
-
-    <header class="hero">
+    <!--Auctions Section-->
+    <section class="auctions py-5">
       <div class="container">
-        <div class="row align-items-center">
-          <!--Text area-->
-          <div class="col-lg-6 text-center text-lg-start">
-            <h1>Ensure a piece of <strong>historical</strong> art!</h1>
-            <p class="lead">Not like any other investments.</p>
-
-            <a href="register.html" class="btn btn-warning btn-lg"
-              >Get Started</a
-            >
-          </div>
-
-          <!--Picture area-->
-          <div class="col-lg-6 text-center">
-            <img
-              src="/img/picturehomepage.jpg"
-              alt="Auction Hero Image"
-              class="img-fluid"
-            />
-          </div>
+        <h2 class="text-center mb-5">Available Auctions</h2>
+        <div class="row g-4" id="auctionsContainer">
+          <!--Here will auctions loading in dynamically -->
         </div>
-      </div>
-    </header>
-
-    <!--Featured auctions-->
-    <section class="auction-carousel py-5">
-      <div class="container position-relative">
-        <h2 class="text-center mb-4 pb-3">Featured Auctions</h2>
-
-        <!--Inside same container-->
-        <div class="carousel-controls d-flex justify-content-center gap-4 mb-4">
-          <button class="carousel-control prev">
-            <i class="fa-solid fa-chevron-left"></i>
-          </button>
-          <button class="carousel-control next">
-            <i class="fa-solid fa-chevron-right"></i>
-          </button>
-        </div>
-        <!--Carousell track-->
-        <div class="row g-4" id="carousel-track"></div>
-        <!--Content is loaded here-->
       </div>
     </section>
     <!--Footer-->
@@ -142,9 +103,7 @@
         <p>&copy; 2025 AuctionBidding - All rights reserved.</p>
       </div>
     </footer>
-
-    <script src="js/main.js"></script>
-    <script src="js/carousel.js"></script>
+    <script src="js/listings.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
