--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="listings.html">Auctions</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profilepage.html">Profile</a>
@@ -54,8 +54,6 @@
         </div>
       </div>
     </nav>
-
-    <!--Hero section-->
 
     <!--This is search bar -->
     <div class="search-section py-5">
@@ -79,7 +77,7 @@
         </div>
       </div>
     </div>
-
+    <!--Hero section-->
     <header class="hero">
       <div class="container">
         <div class="row align-items-center">
