--- a/listings.html
+++ b/listings.html
@@ -71,6 +71,9 @@
                 <i class="fas fa-search"></i>
                 <span class="d-none d-sm-inline">Search</span>
               </button>
+              <button class="btn btn-secondary" type="button" id="clearSearch">
+                Clear
+              </button>
             </div>
           </div>
         </div>
