--- a/profilepage.html
+++ b/profilepage.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="profile.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="profile.html">Profile</a>
+              <a class="nav-link" href="profilepage.html">Profile</a>
             </li>
 
             <li class="nav-item">
@@ -98,20 +98,36 @@
           <form id="createListingForm">
             <div class="mb-3">
               <label class="form-label">Title</label>
-              <input type="text" class="form-control" required />
+              <input type="text" name="title" class="form-control" required />
             </div>
             <div class="mb-3">
               <label class="form-label">Description</label>
-              <textarea class="form-control" rows="3" required></textarea>
+              <textarea
+                name="description"
+                class="form-control"
+                rows="3"
+                required
+              ></textarea>
             </div>
             <div class="mb-3">
               <label class="form-label">Deadline</label>
-              <input type="datetime-local" class="form-control" required />
+              <input
+                type="datetime-local"
+                name="deadline"
+                class="form-control"
+                required
+              />
             </div>
             <div class="mb-3">
               <label class="form-label">Picture</label>
-              <input type="file" class="form-control" multiple accept="image" />
-              <div class="listing-media-preview mt-2" id="mediaPreview"></div>
+              <input
+                type="file"
+                name="media"
+                class="form-control media-upload"
+                multiple
+                accept="image/*"
+              />
+              <div class="media-preview mt-2" id="mediaPreview"></div>
             </div>
             <button type="submit" class="btn btn-primary">
               Create auction
